<resources>
    <string name="app_name">Bantu.in</string>
    <string name="jadwal">Jadwal</string>
    <string name="impianku">Impianku</string>
    <string name="artikel">Artikel</string>
    <string name="profil">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="login">Login</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="password">Password</string>
    <string name="username_atau_email">Username atau Email</string>
    <string name="sign_in">Sign In</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_dengan_google">Masuk Dengan Google</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="bahasa">Bahasa</string>
    <string name="indonesia">Indonesia</string>
    <string name="informasi_lainnya">Informasi Lainnya</string>
    <string name="ketentuan_layanan">Ketentuan Layanan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="beri_kami_nilai">Beri kami nilai</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="motivasi">Motivasi</string>
    <string name="selamat_datang_users">Selamat Siang</string>
    <string name="judul">Judul</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="waktu">Waktu</string>
    <string name="tipe_pengingat">Tipe Pengingat</string>
    <string name="alarm">Alarm</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="simpan">Simpan</string>
    <string name="ulangi_pengingat">Ulangi Pengingat</string>
    <string name="nama">Nama</string>
    <string name="waktu_mulai">Waktu Mulai</string>
    <string name="waktu_selesai">Waktu Selesai</string>
    <string name="selesai_agenda">Selesai Agenda</string>
    <string name="mulai_agenda">Mulai Agenda</string>
    <string name="seharian">Seharian</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="ingatkan_saya_3_hari_sebelumnya">Ingatkan 3 hari sebelumnya</string>
    <string name="nama_peringatan">Nama Peringatan</string>
    <string name="waktu_peringatan">Waktu Peringatan</string>
    <string name="nama_impian">Nama Impian</string>
    <string name="deskripsi_opsional">Deskripsi (Opsional)</string>
    <string name="lanjut">Lanjut</string>
    <string name="tambahkan_foto">Tambahkan Foto</string>
    <string name="ichwan_sholihin">Ichwan Sholihin</string>
    <string name="motivasi_belajar">Motivasi Belajar</string>
    <string name="pengarang_ichwan_sholihin">Pengarang :</string>
    <string name="jumlah_halaman_24">Jumlah Halaman :</string>
    <string name="_24_halaman">24 Halaman</string>
    <string name="kategori">Kategori :</string>
    <string name="suka">Suka</string>
    <string name="unduh">Unduh</string>
    <string name="bagikan">Bagikan</string>
    <string name="agenda_hari_ini">Agenda hari ini</string>
    <string name="daftar_dengan_google">Daftar Dengan Google</string>
    <string name="bagaimana_cara_mendesain_suatu_impian">Bagaimana cara mendesain suatu impian?</string>
    <string name="aktif">Aktif</string>
    <string name="tercapai">Tercapai</string>
    <string name="target_pencapaian">Target Pencapaian</string>
    <string name="e_book_gratis">E-Book Gratis</string>
    <string name="kebiasaan_impian">Hal yang harus dilakukan sehari-hari</string>
    <string name="tambah">Tambah</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="video_populer">Video Populer</string>
    <string name="edit">Edit</string>
    <string name="quotes1">Jika kamu tidak membangun mimipimu sendiri, maka seseorang akan mempekerjakan kamu untuk membangun mimpi mereka</string>
    <string name="quotes_maker1">Bill Gates</string>
    <string name="mulai">Mulai</string>
    <string name="skip">Skip</string>
    <string name="selamat_datang">Selamat\nDatang</string>
    <string name="waktu_pencapaian">Waktu Pencapaian</string>
    <string name="desk_ebook1">Buku ini ditujukan untuk pelajar, guru atau pendidik, orang tua, pembimbing dan siapa pun yang peduli pada nasib lulusan SMA. Panduan ini membekali lulusan SMA dan sederajat dengan kecakapan hidup serta kesadaran karir.</string>
    <string name="desk_ebook2">Kisah motifasi dengan dahsyat nya kekuatan berpikir positif beserta 47 kisah inspiratif akan memngasilkan 2 kunci pemuas hidup dan merupakan kumpulan 4 Ebook best seller 2017.</string>
    <string name="desk_ebook3">Buku ini memberikan gambaran tentang bentuk interaksi yang bisa digunakan dalam kegiatan belajar-mengajar. Dengan interaksi tersebut, diharapkan bisa meningkatkan motivasi siswa untuk menunjukkan minat, inisiatif dan aktif dalam kegiatan belajar. Sehingga akan terbentuk komunikasi timbal-balik antara guru dan siswa. Dengan demikian, akan diperoleh hasil yang lebih baik bagi siswa yaitu tidak sekadar ilmu pengetahuan tapi juga nilai-nilai yang bisa membentuk perkembangan pribadi siswa seutuhnya.</string>
    <string name="desk_video1">Wawancara Mark Zuckerberg, Pendiri dan CEO Facebook oleh Y Combinator mengenai perjalanannya mendirikan Facebook ketika memulai sebagai Startup.
Dalam wawancara nya, Mark Zuckerberg memberikan motivasi dan inspirasi kepada kaum muda untuk tidak takut dalam memulai sebuah startup. Dimana Mark Zuckerberg juga memulai membuat Facebook ketika berusia 19 tahun. Dengan perkembangan raksasa sosial media Facebook seperti saat ini, Mark Zuckerberg mengatakan bahwa Tidak ada yang Mustahil!.
Kami mencoba merangkum bagian-bagian yang dapat memberi pelajaran, motivasi dan inpirasi./nChannel : Daily Sukses</string>
    <string name="desk_video2">Jack Ma adalah seorang pebisnis berkebangsaan Tionghoa. Dia merupakan pendiri sekaligus Chairman Eksekutif dari Alibaba Group, perusahaan e-commerce terbesar di Tiongkok. Dia merupakan warga China Daratan pertama yang pernah muncul di majalah Forbes dan terdaftar sebagai biliuner dunia.
Dalam video ini Jack Ma bercerita awal mula berdirinya Alibaba, dan memberikan nasihat, motivasi dan tips untuk bisa sukses dari pengalamannya.</string>
    <string name="desk_goals">Tentukan impian</string>
    <string name="persiapan">Persiapan</string>
    <string name="literasi">Literasi</string>
    <string name="impian">Impian</string>
    <string name="goalss">Supaya mimpimu berhasil, apa saja yang harus dipersiapkan?</string>

    <string-array name="kat_artikel">
        <item>Keagamaan</item>
        <item>Motivasi Belajar</item>
        <item>Pengembangan Diri</item>
    </string-array>

    <string-array name="kat_pengingat">
        <item>Satu Kali</item>
        <item>Setiap Hari</item>
        <item>Setiap Pekan</item>
        <item>Setiap Bulan</item>
    </string-array>
</resources>
