<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/jadwal"
        android:title="@string/jadwal"
        
        android:icon="@drawable/calendar"
        app:cnb_iconColor="@color/colorPrimary"/>

    <item
        android:id="@+id/impian"
        android:title="@string/impianku"
        android:icon="@drawable/list"
        app:cnb_iconColor="@color/colorPrimary"/>

    <item
        android:id="@+id/artikel"
        android:title="@string/motivasi"
        android:icon="@drawable/book"
        app:cnb_iconColor="@color/colorPrimary"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profil"
        android:icon="@drawable/user"
        app:cnb_iconColor="@color/colorPrimary"/>
</menu>