<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00CCB0"
    tools:context=".verify.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@drawable/logo_app"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:background="@drawable/rectangle"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buat_akun_baru"
        android:layout_centerHorizontal="true"
        android:textColor="#00CCB0"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginBottom="28dp"
        android:layout_above="@id/usersign"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/usersign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:cursorVisible="false"
        android:inputType="textPersonName"
        android:textColorHint="#C4C4C4"
        android:fontFamily="@font/poppins_regular"
        android:layout_margin="12dp"
        android:layout_above="@id/mailsign"/>
    <EditText
        android:id="@+id/mailsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:textColorHint="#C4C4C4"
        android:layout_margin="12dp"
        android:layout_above="@id/pwsign"/>
    <EditText
        android:id="@+id/pwsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:textColorHint="#C4C4C4"
        android:layout_margin="12dp"
        android:layout_above="@id/cpwsign"/>
    <EditText
        android:id="@+id/cpwsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/konfirmasi_password"
        android:inputType="textPassword"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="#C4C4C4"
        android:layout_margin="12dp"
        android:layout_above="@id/btnsignup"/>

    <com.dx.dxloadingbutton.lib.LoadingButton
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        app:lb_cornerRadius="12dp"
        app:lb_btnRippleColor="@color/colorPrimary"
        app:lb_btnText="@string/sign_in"/>

</RelativeLayout>