<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".cnbfragment.ProfilFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_person_black_24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pengaturan"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:fontFamily="@font/poppins_medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="5dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:fontFamily="@font/poppins_medium"/>
    <TextView
        android:id="@+id/userProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_regular"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="#C4C4C4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:layout_marginStart="20dp"
        android:drawablePadding="5dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:fontFamily="@font/poppins_medium"/>
    <TextView
        android:id="@+id/mailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_regular"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="#C4C4C4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bahasa"
        android:drawableStart="@drawable/ic_language_black_24dp"
        android:layout_marginStart="20dp"
        android:drawablePadding="5dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:fontFamily="@font/poppins_medium"/>
    <TextView
        android:id="@+id/langProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indonesia"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:fontFamily="@font/poppins_regular"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="#C4C4C4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informasi_lainnya"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/layanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ketentuan_layanan"
            android:drawableStart="@drawable/ic_assignment_black_24dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="5dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:fontFamily="@font/poppins_medium"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="#C4C4C4"/>
        <TextView
            android:id="@+id/privasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kebijakan_privasi"
            android:drawableStart="@drawable/ic_security_black_24dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="5dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:fontFamily="@font/poppins_medium"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="#C4C4C4"/>
        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beri_kami_nilai"
            android:drawableStart="@drawable/ic_star_black_24dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="5dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:fontFamily="@font/poppins_medium"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="#C4C4C4"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00CCB0"
            app:cardCornerRadius="15dp"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/poppins_semibold"
                android:layout_gravity="center_horizontal"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>