<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verify.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/bg_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textSize="32sp"
        android:textColor="#fff"
        android:layout_marginTop="40dp"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_semibold"/>

    <EditText
        android:id="@+id/maillogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_atau_email"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:cursorVisible="true"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/poppins_regular"
        android:layout_margin="12dp"
        android:layout_above="@id/pwlogin"/>
    <com.subhrajyoti.passwordview.PasswordView
        android:id="@+id/pwlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:cursorVisible="true"
        app:eyeTint="@color/colorPrimary"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins_regular"
        android:layout_margin="12dp"
        android:layout_above="@id/btnsignin"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:fabSize="normal"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/btnsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buat_akun_baru"
        android:layout_marginStart="12dp"
        android:layout_above="@id/btnlogin"
        android:fontFamily="@font/poppins_medium"
        android:textColor="#000000"
        android:textSize="18sp"/>
</RelativeLayout>